--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
         "ng": "ng",
         "start": "node server.js",
         "build": "ng build --configuration production",
+        "postinstall": "npm run build",
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
         "serve:ssr:contador-app": "node dist/contador-app/server/server.mjs"
     },
+
     "private": true,
     "dependencies": {
         "@angular/common": "^19.2.0",
